--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
+/*
+.socials{
+    visibility: hidden;
+}
+*/
+
 *{
     border: 0;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
 html {
     background-color: aqua;
 }
@@ -18,12 +25,12 @@ body {
     */
     
     background-color: black;
-    background-image: url(../images/space-bg.jpg);
     background-size:contain;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-    
+    min-width: 200px;
+    max-width: 525px;
 }
 
 header{
@@ -38,7 +45,8 @@ header{
 .logo { 
     height: 140px;
     position: relative;
-    top: -30px;
+    top: -20px;
+    left: 20px;
 }
 
 .countdown, main {
@@ -66,31 +74,30 @@ header{
     flex-wrap: wrap;
     margin: auto 20%;
     justify-content: center;
-    position: absolute;
-    bottom: 20px;
-
+   padding-top: 10vh;
 }
 
 .box {
     padding: 10px 20px;
     border-color: #d0d0d4;
     border-style: solid;
+    max-width: 50%;
     width: 100px;
 }
 
-.days{
+#days{
     border-width: 0 .1px .1px 0;
 }
 
-.hours {
+#hours {
     border-width: 0 0 .1px .1px;
 }
 
-.minutes {
+#minutes {
     border-width: .1px .1px 0 0 ;
 }
 
-.seconds {
+#seconds {
     border-width: .1px 0 0 .1px;
 }
 
@@ -98,10 +105,9 @@ header{
     font-size: 3rem;
 }
 
-
 .countdown footer a{
     position: absolute;
-    bottom: 5px;
+    bottom: 10px;
     left: calc(50% - 100px);
     right: calc(50% - 100px);
     text-align: center;
@@ -110,38 +116,113 @@ header{
 }
 
 main{
-    height: 95vh;
-}
-
-main>* {
-    padding-top: 20px;
+    height: 90vh;
 }
 
 main .about {
     text-align: justify;
 }
 
+.about p {
+    padding-top: 20px;
+}
 
+.contact, .socials {
+    padding-top: 30px;
+}
+
+.contact-card {
+    padding-top: 10px;
+    vertical-align: middle;
+}
+
+.contact-card a {
+    color: #d0d0d4;
+    text-decoration: none;
+}
+
+.socials {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.socials div{
+    background-color: aliceblue;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.socials a{
+    color : black;
+}
 
 footer{
-    height: 5vh;
+    height: 10vh;
+    padding: 10px 20px;
     color: #d0d0d4;
     font-size: .8rem;
-
 }
 
-
-.material-symbols-rounded {
-  font-variation-settings:'FILL' 0, 'wght' 300, 'GRAD' 0, 'opsz' 40;
-  font-size: 40;
+footer a{
+    text-decoration: none;
+    color: white;
+    font-size: 1rem;
+    font-style: italic;
 }
 
-
-
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 768px) {
     
+    body{
+        max-width: 100vw;
+        width: 100vw;
+        
+    }
+
+    .logo {
+        top : 0px;
+    }
+
+    .countdown, main {
+        padding-top: 150px; 
+    }
+
+    .timebox {
+        padding-top: 20vh;
+    }
+
     .box{
         border-width: 0 .1px;
     }
 
+    main {
+        border: red solid 3px;
+        vertical-align: top;
+    }
+
+    main>section{
+        display: inline-block;
+        border: white 2px solid;
+        padding: 30px;
+        margin: auto;
+    }
+
+    .about {
+        width: 50vw;
+    }
+
+    .contact {
+        width: 40vw;
+        min-width: 310px;
+    }
+
+    .contact-card {
+        padding-top: 20px;
+    }
+
+    .socials a:hover {
+        font-size: 1.02em;
+    }
 }
