--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,9 @@ body {
     max-width: 446px;
     margin: 0 auto;
     */
-    
-    background-color: black;
+    color: blue;
+    position: relative;
+    height: 100vh;
     background-size:contain;
     background-repeat: no-repeat;
     background-position: center;
@@ -34,7 +35,7 @@ header{
     display: inline-block;
     width: 100vw;
     height: 120px;
-    background-color: black;
+    
     position: fixed;
     top: 0;
     z-index: 3;
@@ -45,6 +46,35 @@ header{
     position: relative;
     top: -20px;
     left: 20px;
+}
+
+.background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+    overflow: hidden;
+}
+
+video {
+    object-fit: contain;
+    max-width: 100%; 
+   
+
+}
+
+.foreground {
+    background-color: rgb(0,0,0,.5);
+    color: blue;
+    padding-top: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
 }
 
 .countdown, main {
@@ -217,4 +247,8 @@ footer a{
     .socials a:hover {
         font-size: 1.02em;
     }
+}
+
+body{
+    color: blue;
 }
