--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,6 @@ body {
     max-width: 446px;
     margin: 0 auto;
     */
-    color: blue;
     position: relative;
     height: 100vh;
     background-size:contain;
@@ -69,7 +68,6 @@ video {
 
 .foreground {
     background-color: rgb(0,0,0,.5);
-    color: blue;
     padding-top: 100vh;
     position: absolute;
     top: 0;
@@ -187,7 +185,7 @@ main * {
     color : black;
 }
 
-body>footer{
+.foreground>footer{
     padding: 10px 20px;
     color: #d0d0d4;
     font-size: .8rem;
@@ -225,6 +223,7 @@ footer a{
     }
 
     main {
+        width: 99vw;
         display: flex;
     }
 
@@ -248,6 +247,3 @@ footer a{
     }
 }
 
-body{
-    color: blue;
-}
