--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@
     box-sizing: border-box;
 }
 
-
 body {
     /*
     background-image: url(../images/space-bg.jpg);
@@ -22,10 +21,7 @@ body {
     */
     position: relative;
     height: 100vh;
-    background-size:contain;
-    background-repeat: no-repeat;
-    background-position: center;
-    background-attachment: fixed;
+    background-color: rgb(0,0,0,.5);
     min-width: 200px;
     max-width: 525px;
 }
@@ -34,7 +30,6 @@ header{
     display: inline-block;
     width: 100vw;
     height: 120px;
-    
     position: fixed;
     top: 0;
     z-index: 3;
@@ -67,11 +62,12 @@ video {
 }
 
 .foreground {
+    width: 100%;
     background-color: rgb(0,0,0,.5);
-    padding-top: 100vh;
+    padding-top: 20vh;
     position: absolute;
     top: 0;
-    left: 0;
+    left: calc((100vw - 100%) / 2);
     z-index: 2;
 }
 
@@ -82,7 +78,7 @@ video {
 }
 
 .countdown {
-    padding-top: 120px;
+    
     text-align: center;
 }
 
@@ -145,6 +141,12 @@ main{
     height: 90vh;
 }
 */
+
+main{
+    display: flex;
+    flex-direction: column;
+}
+
 main * {
     text-align: justify;
 }
@@ -210,12 +212,14 @@ footer a{
         top : 0px;
     }
 
-    .countdown, main {
-        padding-top: 150px; 
+    .bigtext {
+        text-align: center;
+        font-size: 5rem;
     }
-
-    .timebox {
-        padding-top: 20vh;
+    
+    .smalltext{
+        padding-top: 15px;
+        font-size: 2.5rem;
     }
 
     .box{
@@ -225,11 +229,17 @@ footer a{
     main {
         width: 99vw;
         display: flex;
+        flex-direction: row;
+        justify-content: space-around;
     }
 
 
     main>* {
-        padding: 5vw;
+        padding: 20px !important;
+    }
+
+    .about{
+        max-width: 50%;
     }
 
     .contact {
