--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,8 @@ body {
     height: 100vh;
     background-color: rgb(0,0,0,.5);
     min-width: 200px;
-    max-width: 525px;
+    max-width: 496px;
+    overflow-x: hidden;
 }
 
 header{
@@ -56,34 +57,26 @@ header{
 
 video {
     object-fit: contain;
-    max-width: 100%; 
-   
-
+    max-height: 100%; 
 }
 
 .foreground {
-    width: 100%;
+    width: 99%;
+    min-height: 100vh;
     background-color: rgb(0,0,0,.5);
-    padding-top: 20vh;
+    color: #f0f0f4;
+    padding-top: 150px;
     position: absolute;
     top: 0;
     left: calc((100vw - 100%) / 2);
     z-index: 2;
 }
 
-.countdown, main {
-    color: #f0f0f4;
-    padding:  15px;
-     
+.foreground * {
+    text-align: center;
 }
-
-.countdown {
     
-    text-align: center;
-}
-
 .bigtext {
-    text-align: center;
     font-size: 3rem;
 }
 
@@ -97,7 +90,7 @@ video {
     flex-wrap: wrap;
     margin: auto 20%;
     justify-content: center;
-   padding-top: 20px;
+    margin-top: 80px;
 }
 
 .box {
@@ -128,36 +121,32 @@ video {
     font-size: 3rem;
 }
 
-.countdown footer a{
-    display: none;
-    left: calc(50% - 100px);
-    right: calc(50% - 100px);
-    text-align: center;
-    color: #a2a2a2;
-    text-decoration: none;
-}
-/*
-main{
-    height: 90vh;
-}
-*/
-
-main{
-    display: flex;
-    flex-direction: column;
-}
-
-main * {
+.about {
+    min-width: 50vw;
+    margin: auto;
+    margin-top: 50px;
     text-align: justify;
 }
 
-.about p {
-    padding-top: 20px;
+.about h1 {
+    font-size: 1.2rem;
 }
 
-.contact, .socials {
-    padding-top: 30px;
+.about p {
+    margin-top: 20px;
+    text-align: justify;
 }
+
+footer>section{
+    margin-top: 20px;
+    padding: auto 10px;
+}
+
+.contact-card{
+    text-align: left;
+}
+
+
 
 .contact-card {
     padding-top: 10px;
@@ -172,9 +161,11 @@ main * {
 .socials {
     display: flex;
     justify-content: space-evenly;
+    align-items: end;
 }
 
 .socials div{
+    margin: 20px;
     background-color: aliceblue;
     width: 50px;
     height: 50px;
@@ -203,9 +194,12 @@ footer a{
 @media only screen and (min-width: 768px) {
     
     body{
-        max-width: 100vw;
-        width: 100vw;
-        
+        max-width: 100vw !important;
+        width: 100vw; 
+    }
+
+    .foreground{
+        width: 100vw !important;
     }
 
     .logo {
@@ -222,38 +216,70 @@ footer a{
         font-size: 2.5rem;
     }
 
+    .timebox {
+        margin-top: 150px;
+    }
+
     .box{
+        width: 25%;
         border-width: 0 .1px;
     }
 
-    main {
-        width: 99vw;
+    .value {
+        font-size: 5rem;
+        padding: auto;
+    }
+
+    .about {
+        min-width: 50vw;
+        max-width: 70vw;
+        margin: auto;
+        margin-top: 50px;
+        text-align: justify;
+        margin-bottom: 150px;
+    }
+    
+    .about h1 {
+        font-size: 2rem;
+    }
+    
+    .about p {
+        margin-top: 20px;
+        text-align: justify;
+    }
+
+    footer{
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
         display: flex;
-        flex-direction: row;
-        justify-content: space-around;
+        flex-direction: row-reverse;
+        justify-content: space-between;
+        align-items: end;
     }
 
-
-    main>* {
-        padding: 20px !important;
-    }
-
-    .about{
-        max-width: 50%;
-    }
-
-    .contact {
-        min-width: 310px;
-    }
-
-   
-
-    .socials{
-        display: none;
+    .socials div{
+        margin:auto 20px;
+        background-color: aliceblue;
+        width: 40px;
+        height: 40px;
+        line-height: 40px;;
+        border-radius: 50%;
+        text-align: center;
     }
 
     .socials a:hover {
         font-size: 1.02em;
     }
-}
 
+    .info {
+       vertical-align: bottom;
+    }
+
+    video {
+        object-fit: contain;
+        max-height: none;
+        max-width: 100%; 
+    }
+}
