--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,7 @@ header{
     width: 100vw;
     height: 120px;
     position: fixed;
+    background-color: black;
     top: 0;
     z-index: 3;
 }
@@ -198,6 +199,10 @@ footer a{
         width: 100vw; 
     }
 
+    header{
+        background-color: rgb(0,0,0,0);
+    }
+
     .foreground{
         width: 100vw !important;
     }
@@ -244,8 +249,10 @@ footer a{
     }
     
     .about p {
+        margin: auto;
         margin-top: 20px;
         text-align: justify;
+        width: 50%;
     }
 
     footer{
