--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ footer a{
         margin: auto;
         margin-top: 20px;
         text-align: justify;
-        width: 50%;
+        width: 500px;
     }
 
     footer{
