--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,9 @@ header{
 }
 
 video {
-    object-fit: contain;
-    max-height: 100%; 
+    object-fit: cover;
+    position: fixed;
+    
 }
 
 .foreground {
@@ -284,9 +285,5 @@ footer a{
        vertical-align: bottom;
     }
 
-    video {
-        object-fit: contain;
-        max-height: none;
-        max-width: 100%; 
-    }
+    
 }
