--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
 header{
     display: inline-block;
     width: 100vw;
-    height: 120px;
+    min-height: 120px;
     position: fixed;
     background-color: black;
     top: 0;
@@ -58,8 +58,7 @@ header{
 
 video {
     object-fit: cover;
-    position: fixed;
-    
+    position: relative;
 }
 
 .foreground {
@@ -202,6 +201,10 @@ footer a{
 
     header{
         background-color: rgb(0,0,0,0);
+    }
+
+    video{
+        width: 100vw;
     }
 
     .foreground{
