--- a/css/about.css
+++ b/css/about.css
@@ -25,3 +25,11 @@
     padding: 20px;
     background-color: #ffffff;
   }
+
+
+  @media screen and (max-width: 768px) {
+    
+    .image-container {
+      display: none;
+    }
+  }
