--- a/css/package.css
+++ b/css/package.css
@@ -35,4 +35,14 @@
 
 
 
-  
+  @media screen and (max-width: 768px) {
+    
+    .package-container {
+      display: block;
+    }
+
+    .package {
+      width: 100%;
+      padding: 20px;
+    }
+  }
