--- a/css/banner.css
+++ b/css/banner.css
@@ -18,6 +18,7 @@ body {
     max-width: 1000px;
     position: relative;
     margin: auto;
+    margin-top: 12.2vh;
 }
 
 /* Next & previous buttons */
