--- a/css/about.css
+++ b/css/about.css
@@ -4,6 +4,19 @@
     height: 100%;
     max-width: 1000px;
     margin: auto;
+    margin-top: 50px;
+    align-items: center;
+  }
+
+  .about-container h2 {
+    text-align: center;
+    font-family: impact;
+    font-size: 60px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    position: relative;
+    top: -50px;
   }
   
   .image-container {
@@ -11,7 +24,6 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0f0f0;
   }
   
   .image-container img {
@@ -23,7 +35,6 @@
   .content-container {
     flex: 70%;
     padding: 20px;
-    background-color: #ffffff;
   }
 
 
