--- a/css/footer.css
+++ b/css/footer.css
@@ -1,3 +1,8 @@
+footer {
+    background-color: #0f1423;
+    color: #b1d4e0;
+}
+
 footer>section{
     margin-top: 20px;
     padding: auto 10px;
@@ -37,7 +42,7 @@ footer{
 }
 
 footer a{
-    color: black;
+    color: #b1d4e0;
     text-decoration: none;
     font-size: 1rem;
     font-style: italic;
