--- a/css/package.css
+++ b/css/package.css
@@ -3,6 +3,16 @@
     height: 100%;
     max-width: 1000px;
     margin: auto;
+    margin-top: 50px;
+  }
+
+  .packages h2 {
+    text-align: center;
+    font-family: impact;
+    font-size: 60px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 2px;
   }
 
   .packages header {
@@ -32,7 +42,7 @@
     font-size: 2rem;
   }
 
-  
+
   @media screen and (max-width: 768px) {
     
     .package-container {
