--- a/css/services.css
+++ b/css/services.css
@@ -3,6 +3,16 @@
     margin: auto;
 }
 
+.services h2 {
+    text-align: center;
+	font-family: impact;
+	font-size: 60px;
+	font-weight: 500;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	margin: 50px 0 30px 0;
+}
+
 .service-container ul {
     display: flex;
     flex-wrap: wrap;
@@ -13,12 +23,14 @@
     width: 50%;
     text-align: center;
     list-style: none;
+    margin: 10px 0;
+    font-weight: 800;
 }
 
 .services a {
-    color: black;
     text-decoration: none;
     font-size: 1.2rem;
+    color: inherit;
 }
 
 @media screen and (max-width: 600px) {
