--- a/css/banner.css
+++ b/css/banner.css
@@ -10,12 +10,17 @@ body {
 
 .banner img {
     vertical-align: middle;
+    width: 100vw;
+}
+
+.banner video {
+    vertical-align: middle;
     max-width: 100%;
 }
 
 /* Slideshow container */
 .banner {
-    max-width: 1000px;
+    max-width: 100vw;
     position: relative;
     margin: auto;
     margin-top: 12.2vh;
