client logo & preloader-buggy

--- a/css/package.css
+++ b/css/package.css
@@ -18,7 +18,7 @@
   .packages header {
     max-width: 700px;
     margin: auto;
-    text-align: center;
+    text-align: justify;
   }
 
   .package-container {
