--- a/css/preloader.css
+++ b/css/preloader.css
@@ -1,26 +1,32 @@
 #preloader{
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     bottom: 0;
     right: 0;
-    background-size: 20%;
     width: 100vw;
     height: 10000000px;
     z-index: 100;
 }
 
-/* #preloader>img {
-    position: fixed;
-    top: 40%;
-    left: 40%;
-    width: 20%;
+#preloader-video {
+    max-width: 100vw;
+    position: relative;
+    z-index: 105;
+}
 
-} */
+#preloader-bg {
 
-
-#preloader video {
-    min-width: 100vw;
     min-height: 100vh;
+    min-width: 100vw;
+    position: absolute;
+    z-index: 104;
+}
 
+@media screen and (max-width: 768px) {
+
+    #preloader-video {
+       top: 30vh;
+    }
+    
 }
