--- a/css/about.css
+++ b/css/about.css
@@ -35,6 +35,9 @@
   .content-container {
     flex: 70%;
     padding: 20px;
+    font-size: 1.3rem;
+    font-weight: 500;
+    line-height: 150%;
   }
 
 
