--- a/css/banner.css
+++ b/css/banner.css
@@ -1,8 +1,3 @@
-body {
-    font-family: Verdana, sans-serif;
-    margin: 0
-}
-
 .mySlides {
     display: none;
     max-width: 100vw;
@@ -16,6 +11,9 @@ body {
 .banner video {
     vertical-align: middle;
     max-width: 100%;
+    position: relative;
+    margin-top: -120px;
+
 }
 
 /* Slideshow container */
