--- a/css/style.css
+++ b/css/style.css
@@ -5,11 +5,16 @@
 }
 
 body {
-	max-width: 100vw;
-	background-color: #dfd0b9;
+	max-width: 1000vw;
+	
 	color: #182952;
 }
 
 article>h2 {
 	text-align: center	;
+}
+
+#content {
+	background-color: #dfd0b9;
+	display: none;
 }
