--- a/css/header.css
+++ b/css/header.css
@@ -26,7 +26,7 @@
   }
   
   header .navigation .logo h1{
-    color: #b1d4e0;
+    color: #d1f4f0;
     font-size: 30px;
     line-height: 38px;
   }
