--- a/css/package.css
+++ b/css/package.css
@@ -35,13 +35,15 @@
   }
 
   .package-heading {
-    border: 2px solid goldenrod;
-    border-bottom: 1px solid goldenrod;
+    border: 2px solid #f7be4b;
+    border-bottom: 1px solid #f7be4b;
   }
 
   .package-details {
     border: 2px solid goldenrod;
     border-top: 1px solid goldenrod;
+    min-height: 200px;
+    vertical-align: middle;
   }
 
   .package-name{
