about css updated

--- a/css/about.css
+++ b/css/about.css
@@ -43,7 +43,7 @@
 
   @media screen and (max-width: 768px) {
     
-    .image-container {
-      display: none;
+    .about-container {
+      flex-direction: column;
     }
   }
