--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -3,6 +3,7 @@
     height: 100%;
     max-width: 1000px;
     margin: auto;
+    padding: 50px;
 }
 
 .testimonials>h2 {
@@ -35,7 +36,9 @@
 
 .customer-image {
     width: 70px;
+    height: 70px;
     border-radius: 50%;
+    object-fit: cover;
 }
 
 .testimonial-content {
