--- a/css/services.css
+++ b/css/services.css
@@ -34,7 +34,11 @@
     
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
+    
+    .services h2 {
+      font-size: 30px !important;
+    }
 
     .service-container ul {
         flex-direction: column;
