--- a/css/contact.css
+++ b/css/contact.css
@@ -23,7 +23,7 @@ input, textarea {
     font-size: 1.2rem;
 }
 
-input[type="submit"] {
+button[type="submit"] {
     display: block;
     width: 60%;
     margin: 1em auto;
