--- a/css/banner.css
+++ b/css/banner.css
@@ -6,6 +6,7 @@
 .banner img {
     vertical-align: middle;
     width: 100vw;
+    max-width: 100%;
 }
 
 .banner video {
@@ -21,6 +22,15 @@
     max-width: 100vw;
     position: relative;
     margin: auto;
+    /* margin-top: 12.2vh; */
+}
+
+#banner1 {
+    position: relative;
+    margin-top: -24vh;
+}
+
+#banner2 {
     margin-top: 12.2vh;
 }
 
@@ -104,6 +114,10 @@
 @media screen and (max-width: 768px) {
     .banner video {
         margin-top: 0px !important;
+    }
+
+    #banner1 {
+        margin-top: 5vw;
     }
 }
 
