--- a/css/header.css
+++ b/css/header.css
@@ -18,7 +18,7 @@
     min-width: 100%;
     z-index: 10;
     background: #0f1423;
-    border-bottom: 2px solid #0c2d48;
+    /* border-bottom: 2px solid #0c2d48; */
   }
   
   header .navigation .logo{
