--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,19 @@
 
 body {
 	max-width: 1000vw;
-	
 	color: #182952;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+	display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  body {
+	-ms-overflow-style: none;  /* IE and Edge */
+	scrollbar-width: none;  /* Firefox */
+  }
 
 article>h2 {
 	text-align: center	;
