--- a/css/client.css
+++ b/css/client.css
@@ -1,4 +1,5 @@
 .slider-area h2 {
+	position: relative;
 	text-align: center;
 	font-family: impact;
 	font-size: 60px;
@@ -6,29 +7,119 @@
 	text-transform: uppercase;
 	letter-spacing: 2px;
 	margin: 50px 0 30px 0;
+	padding-top: 20px;
 }
-.wrapper {
-	display: flex;
-	max-width: 1000px;
-	margin: 0 auto;
+
+.clients-bg img {
+	position: absolute;
+	width: 100vw;
+	background-color: #fec85b;
+	max-height: 450px;
+}
+
+/* number of images*/
+/* number of images*/
+.gallery {
+	margin: auto;
+	margin-top: 50px;
+	--s: 280px; /* control the size */
+	--d: 15s; /* animation duration */
+	display: grid;
+	width: var(--s);
+	aspect-ratio: 1;
 	overflow: hidden;
-	padding: 2.5rem;
-}
-.item {
-	animation: animate 25s  linear infinite;
-	margin: 0 20px;
-}
-.container:hover .item {
-	animation-play-state: paused;
-}
-@keyframes animate {
-	0% {
-		transform: translate3d(0, 0, 0);
+	padding: calc(var(--s) / 20);
+	border-radius: 50%;
+	position: relative;
+	-webkit-clip-path: circle(49.5%);
+			clip-path: circle(49.5%); /* to avoid a few glitch caused by overflow: hidden */
+  }
+  
+  .gallery::after {
+	content: "";
+	position: absolute;
+	inset: 0;
+	padding: inherit;
+	border-radius: inherit;
+	background: #DFBA69;
+	-webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
+	-webkit-mask-composite: xor;
+	mask-composite: exclude;
+  }
+  
+  .gallery > img {
+	grid-area: 1/1;
+	width: 100%;
+	height: 100%;
+	-o-object-fit: cover;
+	   object-fit: cover;
+	border-radius: inherit;
+	transform-origin: 50% 180.6562964876%;
+  }
+  
+  .gallery::after,
+  .gallery > img {
+	animation: m var(--d) infinite cubic-bezier(0.5, -0.2, 0.5, 1.2);
+  }
+  
+  .gallery > img:nth-child(2) {
+	animation-delay: calc(-0.125*var(--d));
+  }
+  
+  .gallery > img:nth-child(3) {
+	animation-delay: calc(-0.25*var(--d));
+  }
+  
+  .gallery > img:nth-child(4) {
+	animation-delay: calc(-0.375*var(--d));
+  }
+  
+  .gallery > img:nth-child(5) {
+	animation-delay: calc(-0.5*var(--d));
+  }
+  
+  .gallery > img:nth-child(6) {
+	animation-delay: calc(-0.625*var(--d));
+  }
+  
+  .gallery > img:nth-child(7) {
+	animation-delay: calc(-0.75*var(--d));
+  }
+  
+  .gallery > img:nth-child(8) {
+	animation-delay: calc(-0.875*var(--d));
+  }
+  
+  @keyframes m {
+	0%, 3% {
+	  transform: rotate(0);
 	}
-	100% {
-		transform: translate3d(-1600px, 0, 0);
+	10.5%, 15.5% {
+	  transform: rotate(-45deg);
 	}
-}
+	23%, 28% {
+	  transform: rotate(-90deg);
+	}
+	35.5%, 40.5% {
+	  transform: rotate(-135deg);
+	}
+	48%, 53% {
+	  transform: rotate(-180deg);
+	}
+	60.5%, 65.5% {
+	  transform: rotate(-225deg);
+	}
+	73%, 78% {
+	  transform: rotate(-270deg);
+	}
+	85.5%, 90.5% {
+	  transform: rotate(-315deg);
+	}
+	98%, 100% {
+	  transform: rotate(-360deg);
+	}
+  }/*# sourceMappingURL=clients.css.map */
+  
 @media (max-width:767px) {
 	.slider-area h2 {
 		font-size: 30px;
